tests/toylang/neg/001162_mutation.toylang
program a = { int a then sleep; } .
